--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
+  "name": "bentobox-next",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zeSemPass/bentobox-next.git"
+  },
   "private": true,
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "export": "next build && next export",
     "type-check": "tsc"
   },
   "dependencies": {
@@ -16,5 +22,11 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "typescript": "4.0"
-  }
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
+  "license": "MIT"
 }
